# detour_hooks

./: CMakeLists.txt  README.md  hde64_04c_Mar 2009.rar
hde/: CMakeLists.txt  hde32_28c_Mar 2009.rar
hde/hde32/source/: hde.c  hde32.c
hde/hde64/source/: hde.c  hde64.c
impl/dhooks/: context.cpp  context.h  context.ixx  dhooks.cpp  dhooks.ixx  entry.cpp  entry.h  entry.ixx  helpers.h  hook.cpp  hook.h  hook_utils.cpp  hook_utils.h  includes.h  status.cpp  status.h  status.ixx  trampoline.cpp  trampoline.h  trampoline.ixx  wrapper.cpp  wrapper.h  wrapper.ixx  wrapper.ixx.deprecated  wrapper_fwd.h
impl/dhooks/hde/: include.h
